# nnx-torch-compat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/nnx_torch_compat/: __init__.py
src/nnx_torch_compat/initialization/: __init__.py  _embed.py  _layer_norm.py  _linear.py  util.py
tests/: test_initialization.py
